--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="all_ranking">%d등</string>
     <string name="all_score">%d점</string>
     <string name="all_score_first_float">%.1f점</string>
+    <string name="all_year">%d년</string>
+    <string name="all_month">%d월</string>
+    <string name="all_year_month">%d년 %d월</string>
 
     <string name="main_back_press_to_exit">뒤로가기를 한 번 더 누르면 종료됩니다.</string>
 
@@ -93,9 +96,6 @@
     <string name="stats_winning_percentage">직관 승률</string>
     <string name="stats_stadium_visit_count">구장 방문 횟수</string>
 
-    <string name="attendance_history_year">%d년</string>
-    <string name="attendance_history_month">%d월</string>
-    <string name="attendance_history_year_month">%d년 %d월</string>
     <string name="attendance_history_add_attendance">직관 내역 추가하기</string>
     <string name="attendance_history_add_attendance_description">직관 내역에 추가할 경기를 선택해 주세요</string>
     <string name="attendance_history_add_attendance_confirm">%s\n직관 내역에 추가할까요?</string>
